adding fuzzyfinder and l9

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,9 @@
 [submodule "bundle/easygrep"]
 	path = bundle/easygrep
 	url = https://github.com/vim-scripts/EasyGrep.git
+[submodule "bundle/fuzzyfinder"]
+	path = bundle/fuzzyfinder
+	url = https://github.com/vim-scripts/FuzzyFinder.git
+[submodule "bundle/l9"]
+	path = bundle/l9
+	url = https://github.com/clones/vim-l9.git
