--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "bundle/l9"]
 	path = bundle/l9
 	url = https://github.com/clones/vim-l9.git
+[submodule "bundle/rainbow"]
+	path = bundle/rainbow
+	url = https://github.com/vim-scripts/Rainbow-Parenthsis-Bundle.git
